feat(microservices): refactoring code, adding features for Protocol(Generating with Specific Template and download the template). Needs some testing.